# guillotine

./: .gitignore  CLAUDE.md  PIVOT_TASK.md  README.md  pyproject.toml
0f/7248570e14/: metadata.json
15/e6a8656e59/: metadata.json
1e/2134e5c987/: metadata.json
2e/b82913b98f/: metadata.json
3d/2229eb531d/: metadata.json
3f/f3a5dfa465/: metadata.json
41/3b4a4c91f8/: metadata.json
43/91a745d95b/: metadata.json
45/444d410267/: metadata.json
4b/9532420989/: metadata.json
62/aa42223493/: metadata.json
67/764160b1c6/: metadata.json
67/bed816ff32/: metadata.json
6a/820e39c567/: metadata.json
6d/047e79d909/: metadata.json
6f/2e2ffebb41/: metadata.json
70/bcebc96bcc/: metadata.json
82/4967fb5744/: metadata.json
83/bb60c38f68/: metadata.json
85/ec0bbc1f78/: metadata.json
86/edc8adbb28/: metadata.json
8d/4f31d64875/: metadata.json
93/889ce21ed2/: metadata.json
96/8222cbdd1d/: metadata.json
Track C/: b2_foundation.py  branch_b2.csv  branch_baseline.csv  run_b2.ipynb  run_fuse_submit.ipynb  run_pipeline_c.ipynb  trackc.py
docs/: CHALLENGE_BRIEF.md  CONSENSUS_QUERIES.md  REFERENCES.md  RESEARCH_PLAN.md  ROADMAP.md  SLIDES.md  SLIDES_JURY.md  SPEAKER_NOTES.md
notebooks/: track_b_cluster.ipynb
papers/: What methods enable contrast-agnostic cross-modal retrieval of same-subject 3D brain MRI between contrast-enhanced T1 and T2 - Jun 27, 2026.csv
track_b/: __init__.py  cli.py  deform.py  io.py  metrics.py  mind.py  rerank.py
track_c/: RANK_CSV.md  run_b2.ipynb  run_fuse_submit.ipynb  run_pipeline.ipynb  run_pipeline_c.ipynb  trackc.py
(+256 files in other folders)
